force-app/main/default/objects/AccountSegmentJunktion__c/AccountSegmentJunktion__c.object-meta.xml
<CustomObject>
    <label>Account Segment Junktion</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>RowNum</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Segment Junktion</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>