force-app/main/default/objects/AccountSegmentJunktion__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Account Segment Junktion</relationshipLabel>
    <relationshipName>Account_Segment_Junktion</relationshipName>
    <type>Lookup</type>
</CustomField>