force-app/main/default/objects/AccountSegmentJunktion__c/fields/AccountSegment__c.field-meta.xml
<CustomField>
    <fullName>AccountSegment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account Segment</label>
    <referenceTo>AccountSegment__c</referenceTo>
    <relationshipLabel>Account Segment Junktion</relationshipLabel>
    <relationshipName>Account_Segment_Junktion</relationshipName>
    <type>Lookup</type>
</CustomField>